spacing and btn fix

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -62,7 +62,7 @@ list-style-type: none;
 
 h1 {
 font-size: 2em;
-line-height: 1.2em;
+line-height: 2em;
 }
 
 h2 {
@@ -82,7 +82,7 @@ line-height: 1.4em;
 
 p {
 font-size: 1em;
-line-height: 1.4em;
+line-height: 1.5em;
 margin: 2em 0;
 }
 
@@ -187,9 +187,16 @@ animation-iteration-count: 0;
 }
 
 .btn.rounded {
-  border-radius: 15%;
   transition: .3s ease-in-out;
   border-radius: 100rem;
+}
+
+.btn.large {
+  width: 350px;
+}
+
+.hero .btn {
+  margin-top: 1em;
 }
 
 
